0709 Servlet, jsp 기본 개념. get, post 방식의 호출

--- a/0709_WebStudy01/.project
+++ b/0709_WebStudy01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WebStudy01</name>
+	<name>0709_WebStudy01</name>
 	<comment></comment>
 	<projects>
 	</projects>
